# conda-httpx

./: LICENSE  README.md  pyproject.toml
conda_httpx/: auth.py  client.py
tests/: test_auth.py  test_client.py  test_requirements.txt
